changed \exp_continue_f:w to \exp_end_continue_f:w added \exp_end_continue_f:wn

--- a/l3kernel/l3basics.dtx
+++ b/l3kernel/l3basics.dtx
@@ -2092,37 +2092,39 @@
 %   The character codes are different, thus the \cs{if:w} test is false,
 %   and \TeX{} reads \cs{__cs_to_str:N} after turning the following
 %   control sequence into a string; this auxiliary removes the escape
-%   character, and stops the expansion of the initial \cs{exp:w}.
+%   character, and stops the expansion of the initial \cs{tex_romannumeral:D}.
 %   The second case is that the escape character is not printable. Then
 %   the \cs{if:w} test is unfinished after reading a the space from
 %   \verb*|\token_to_str:N \ |, and the auxiliary \cs{__cs_to_str:w}
 %   is expanded, feeding |-| as a second character for the test;
 %   the test is false, and \TeX{} skips to \cs{fi:}, then performs
-%   \cs{token_to_str:N}, and stops the \cs{exp:w} with \cs{exp_end:}.
+%   \cs{token_to_str:N}, and stops the \cs{tex_romannumeral:D} with \cs{c_zero}.
 %   The last case is that the escape character is itself a space. In this
 %   case, the \cs{if:w} test is true, and the auxiliary \cs{__cs_to_str:w}
-%   comes into play, inserting |-\__int_value:w|, which expands \cs{exp_end:}
-%   to the character |0|. The initial \cs{exp:w} then sees
+%   comes into play, inserting |-\__int_value:w|, which expands \cs{c_zero}
+%   to the character |0|. The initial \cs{tex_romannumeral:D} then sees
 %   |0|, which is not a terminated number, followed by the escape character,
 %   a space, which is removed, terminating the expansion of
-%   \cs{exp:w}.
+%   \cs{tex_romannumeral:D}.
 %   In all three cases, \cs{cs_to_str:N} takes two expansion steps
-%   to be fully expanded.\footnote{Frank: fix documentation}
+%   to be fully expanded.
 %    \begin{macrocode}
 \cs_set_nopar:Npn \cs_to_str:N
   {
-    \exp:w
+%    \end{macrocode}
+%    We implement the expansion scheme using \cs{tex_romannumeral:D}
+%    terminating it with \cs{c_zero} rather than using \cs{exp:w} and
+%    \cs{exp_end:} as we normally do. The reason is that the code
+%    heavily depends on terminating the expansion with \cs{c_zero} so
+%    we make this dependency explicit.
+%    \begin{macrocode}
+    \tex_romannumeral:D
       \if:w \token_to_str:N \ \__cs_to_str:w \fi:
       \exp_after:wN \__cs_to_str:N \token_to_str:N
   }
-\cs_set:Npn \__cs_to_str:N #1 { \exp_end: }
+\cs_set:Npn \__cs_to_str:N #1 { \c_zero }
 \cs_set:Npn \__cs_to_str:w #1 \__cs_to_str:N
-  { \exp_continue_f:w \exp_after:wN \use_none:nn \fi: \exp_after:wN \exp_end: }
-%    \end{macrocode}
-%    A slightly more compact coding would be using the fact that we
-%    know how \cs{exp_end:} is implemented.
-%    \begin{macrocode}
-%  { - \__int_value:w \fi: \exp_after:wN \exp_end: }
+  { - \__int_value:w \fi: \exp_after:wN \c_zero }
 %    \end{macrocode}
 % \end{macro}
 % \end{macro}
