--- a/l3kernel/l3fp-convert.dtx
+++ b/l3kernel/l3fp-convert.dtx
@@ -116,7 +116,7 @@
 \cs_new_nopar:Npn \fp_to_scientific:n
   {
     \exp_after:wN \@@_to_scientific_dispatch:w
-    \exp:w \exp_continue_f:w \@@_parse:n
+    \exp:w \exp_end_continue_f:w \@@_parse:n
   }
 %    \end{macrocode}
 % \end{macro}
@@ -149,7 +149,7 @@
     \group_end:
     \cs_new:Npn \@@_to_scientific_dispatch:w \s_@@ \@@_chk:w #1#2
       {
-        \if_meaning:w 2 #2 \exp_after:wN - \exp:w \exp_continue_f:w \fi:
+        \if_meaning:w 2 #2 \exp_after:wN - \exp:w \exp_end_continue_f:w \fi:
         \if_case:w #1 \exp_stop_f:
              \@@_case_return:nw { 0 }
         \or: \exp_after:wN \@@_to_scientific_normal:wnnnnn
@@ -206,7 +206,7 @@
 \cs_new_nopar:Npn \fp_to_decimal:n
   {
     \exp_after:wN \@@_to_decimal_dispatch:w
-    \exp:w \exp_continue_f:w \@@_parse:n
+    \exp:w \exp_end_continue_f:w \@@_parse:n
   }
 %    \end{macrocode}
 % \end{macro}
@@ -234,7 +234,7 @@
 %    \begin{macrocode}
 \cs_new:Npn \@@_to_decimal_dispatch:w \s_@@ \@@_chk:w #1#2
   {
-    \if_meaning:w 2 #2 \exp_after:wN - \exp:w \exp_continue_f:w \fi:
+    \if_meaning:w 2 #2 \exp_after:wN - \exp:w \exp_end_continue_f:w \fi:
     \if_case:w #1 \exp_stop_f:
          \@@_case_return:nw { 0 }
     \or: \exp_after:wN \@@_to_decimal_normal:wnnnnn
@@ -279,7 +279,7 @@
         \exp_after:wN \@@_trim_zeros:w
         \exp_after:wN 0
         \exp_after:wN .
-        \exp:w \exp_continue_f:w \prg_replicate:nn { - #2 } { 0 }
+        \exp:w \exp_end_continue_f:w \prg_replicate:nn { - #2 } { 0 }
         #3#4#5#6 ;
       }
   }
@@ -307,7 +307,7 @@
 \cs_new_nopar:Npn \fp_to_tl:n
   {
     \exp_after:wN \@@_to_tl_dispatch:w
-    \exp:w \exp_continue_f:w \@@_parse:n
+    \exp:w \exp_end_continue_f:w \@@_parse:n
   }
 %    \end{macrocode}
 % \end{macro}
@@ -321,7 +321,7 @@
 %    \begin{macrocode}
 \cs_new:Npn \@@_to_tl_dispatch:w \s_@@ \@@_chk:w #1#2
   {
-    \if_meaning:w 2 #2 \exp_after:wN - \exp:w \exp_continue_f:w \fi:
+    \if_meaning:w 2 #2 \exp_after:wN - \exp:w \exp_end_continue_f:w \fi:
     \if_case:w #1 \exp_stop_f:
            \@@_case_return:nw { 0 }
     \or:   \exp_after:wN \@@_to_tl_normal:nnnnn
@@ -377,7 +377,7 @@
 \cs_new_nopar:Npn \fp_to_int:n
   {
     \exp_after:wN \@@_to_int_dispatch:w
-    \exp:w \exp_continue_f:w \@@_parse:n
+    \exp:w \exp_end_continue_f:w \@@_parse:n
   }
 %    \end{macrocode}
 % \end{macro}
@@ -390,7 +390,7 @@
 %    \begin{macrocode}
 \cs_new:Npn \@@_to_int_dispatch:w #1;
   {
-    \exp_after:wN \@@_to_decimal_dispatch:w \exp:w \exp_continue_f:w
+    \exp_after:wN \@@_to_decimal_dispatch:w \exp:w \exp_end_continue_f:w
     \@@_round:Nwn \@@_round_to_nearest:NNN #1; { 0 }
   }
 %    \end{macrocode}
@@ -528,7 +528,7 @@
     \exp_not:N     \exp_after:wN ,
     \exp_not:N     \exp_after:wN \c_space_tl
     \exp_not:N     \exp:w 
-    \exp_not:N     \exp_continue_f:w
+    \exp_not:N     \exp_end_continue_f:w
     \exp_not:N     \@@_to_tl_dispatch:w #1 #2 ;
                  }
     \exp_not:N \@@_array_to_clist_loop:Nw
