--- a/l3kernel/l3fp-parse.dtx
+++ b/l3kernel/l3fp-parse.dtx
@@ -311,7 +311,7 @@
 % \begin{quote}
 %   \cs{exp_after:wN} \cs{@@_parse_continue:NwN} \newline
 %   \cs{exp_after:wN} \meta{precedence} \newline
-%   \cs{exp:w} \cs{exp_continue_f:w} \newline
+%   \cs{exp:w} \cs{exp_end_continue_f:w} \newline
 %   ~~\cs{@@_parse_one:Nw} \meta{precedence}
 % \end{quote}
 % This expands \cs{@@_parse_one:Nw} \meta{precedence} completely, which
@@ -354,9 +354,9 @@
 % \begin{quote}
 %   \cs{exp_after:wN} \cs{@@_parse_continue:NwN} \newline
 %   \cs{exp_after:wN} \meta{precedence} \newline
-%   \cs{exp:w} \cs{exp_continue_f:w} \newline
+%   \cs{exp:w} \cs{exp_end_continue_f:w} \newline
 %   |\__fp_|\meta{operator}|_o:ww| \meta{number} \meta{number_2} \newline
-%   \cs{exp:w} \cs{exp_continue_f:w} \newline
+%   \cs{exp:w} \cs{exp_end_continue_f:w} \newline
 %   |\__fp_parse_infix_|\meta{operator_2}|:N| \meta{precedence}
 % \end{quote}
 % where |\__fp_|\meta{operator}|_o:ww| computes \meta{number}
@@ -604,7 +604,7 @@
 %   not yet read.  This requires in particular closing all conditionals
 %   properly before expanding.
 %    \begin{macrocode}
-\cs_new:Npn \@@_parse_expand:w #1 { \exp_continue_f:w #1 }
+\cs_new:Npn \@@_parse_expand:w #1 { \exp_end_continue_f:w #1 }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -779,12 +779,12 @@
 \cs_new:Npn \@@_exp_after_mark_f:nw #1
   {
     \__msg_kernel_expandable_error:nn { kernel } { fp-early-end }
-    \exp_after:wN \c_nan_fp \exp:w \exp_continue_f:w #1
+    \exp_after:wN \c_nan_fp \exp:w \exp_end_continue_f:w #1
   }
 \cs_new:cpn { @@_exp_after_?_f:nw } #1#2
   {
     \__msg_kernel_expandable_error:nnn { kernel } { bad-variable } {#2}
-    \exp_after:wN \c_nan_fp \exp:w \exp_continue_f:w #1
+    \exp_after:wN \c_nan_fp \exp:w \exp_end_continue_f:w #1
   }
 %<*package>
 \group_begin:
@@ -793,7 +793,7 @@
     {
       \cs_gset:cpn { @@_exp_after_?_f:nw } #1#2
         {
-          \exp_after:wN \c_nan_fp \exp:w \exp_continue_f:w #1
+          \exp_after:wN \c_nan_fp \exp:w \exp_end_continue_f:w #1
           \str_if_eq:nnTF {#2} { \protect }
             {
               \cs_if_eq:NNTF #2 \@unexpandable@protect { \use_i:nn } { \use:n }
@@ -836,7 +836,7 @@
   {
     \exp_after:wN \@@_parse_infix_after_operand:NwN
     \exp_after:wN #1
-    \exp:w \exp_continue_f:w
+    \exp:w \exp_end_continue_f:w
       \exp_after:wN \@@_parse_one_register_aux:Nw
       \exp_after:wN #2
       \__int_value:w
@@ -890,7 +890,7 @@
   {
     \exp_after:wN \@@_parse_infix_after_operand:NwN
     \exp_after:wN #1
-    \exp:w \exp_continue_f:w
+    \exp:w \exp_end_continue_f:w
       \exp_after:wN \@@_sanitize:wN
       \int_use:N \__int_eval:w \c_zero \@@_parse_trim_zeros:N
   }
@@ -947,14 +947,14 @@
       {
         \__msg_kernel_expandable_error:nnn
           { kernel } { unknown-fp-word } {#2}
-        \exp_after:wN \c_nan_fp \exp:w \exp_continue_f:w
+        \exp_after:wN \c_nan_fp \exp:w \exp_end_continue_f:w
         \@@_parse_infix:NN
       }
       #1
   }
 \cs_new:Npn \@@_parse_letters:N #1
   {
-    \exp_continue_f:w
+    \exp_end_continue_f:w
     \if_int_compare:w
         \if_catcode:w \scan_stop: \exp_not:N #1
           \c_zero
@@ -1002,7 +1002,7 @@
       {
         \__msg_kernel_expandable_error:nnn
           { kernel } { fp-missing-number } {#1}
-        \exp_after:wN \c_nan_fp \exp:w \exp_continue_f:w
+        \exp_after:wN \c_nan_fp \exp:w \exp_end_continue_f:w
         \@@_parse_infix:NN #3 #1
       }
       {
@@ -1730,7 +1730,7 @@
 \cs_new:Npn \@@_parse_apply_unary:NNNwN #1#2#3#4@#5
   {
     #3 #2 #4 @
-    \exp:w \exp_continue_f:w #5 #1
+    \exp:w \exp_end_continue_f:w #5 #1
   }
 %    \end{macrocode}
 % \end{macro}
@@ -1776,7 +1776,7 @@
   {
     \exp_after:wN \@@_parse_infix_after_operand:NwN
     \exp_after:wN #1
-    \exp:w \exp_continue_f:w
+    \exp:w \exp_end_continue_f:w
       \exp_after:wN \@@_sanitize:wN
       \int_use:N \__int_eval:w \c_zero \@@_parse_strim_zeros:N
   }
@@ -1844,7 +1844,7 @@
 \cs_set_protected:Npn \@@_tmp:w #1 #2
   {
     \cs_new_nopar:cpn { @@_parse_word_#1:N }
-      { \exp_after:wN #2 \exp:w \exp_continue_f:w \@@_parse_infix:NN }
+      { \exp_after:wN #2 \exp:w \exp_end_continue_f:w \@@_parse_infix:NN }
   }
 \@@_tmp:w { inf } \c_inf_fp
 \@@_tmp:w { nan } \c_nan_fp
@@ -1899,7 +1899,7 @@
         \exp_after:wN \@@_from_dim_test:ww
         \exp_after:wN 0 \exp_after:wN ,
         \__int_value:w \__dim_eval:w 1 #1 \exp_after:wN ;
-        \exp:w \exp_continue_f:w \@@_parse_infix:NN
+        \exp:w \exp_end_continue_f:w \@@_parse_infix:NN
       }
   }
 %    \end{macrocode}
@@ -2102,10 +2102,10 @@
 %    \begin{macrocode}
 \cs_new:Npn \@@_parse_operand:Nw #1
   {
-    \exp_continue_f:w
+    \exp_end_continue_f:w
     \exp_after:wN \@@_parse_continue:NwN
     \exp_after:wN #1
-    \exp:w \exp_continue_f:w
+    \exp:w \exp_end_continue_f:w
     \exp_after:wN \@@_parse_one:Nw
     \exp_after:wN #1
     \exp:w
@@ -2124,8 +2124,8 @@
   {
     \exp_after:wN \@@_parse_continue:NwN
     \exp_after:wN #1
-    \exp:w \exp_continue_f:w \cs:w @@_#3_o:ww \cs_end: #2 #4
-    \exp:w \exp_continue_f:w #5 #1
+    \exp:w \exp_end_continue_f:w \cs:w @@_#3_o:ww \cs_end: #2 #4
+    \exp:w \exp_end_continue_f:w #5 #1
   }
 %    \end{macrocode}
 % \end{macro}
@@ -2595,15 +2595,15 @@
       \exp_after:wN \@@_parse_continue_compare:NNwNN
       \exp_after:wN #1
       \exp_after:wN #2
-      \exp:w \exp_continue_f:w
+      \exp:w \exp_end_continue_f:w
       \@@_exp_after_o:w #3;
-      \exp:w \exp_continue_f:w
+      \exp:w \exp_end_continue_f:w
     \else:
       \exp_after:wN \@@_parse_continue:NwN
       \exp_after:wN #2
-      \exp:w \exp_continue_f:w
+      \exp:w \exp_end_continue_f:w
       \exp_after:wN #1
-      \exp:w \exp_continue_f:w
+      \exp:w \exp_end_continue_f:w
     \fi:
     #4 #2
   }
