--- a/l3trial/l3fp-extras/l3fp-functions.dtx
+++ b/l3trial/l3fp-extras/l3fp-functions.dtx
@@ -155,7 +155,7 @@
         \exp_after:wN #1
         \exp_after:wN ,
         \exp_after:wN {
-          \exp:w \exp_continue_f:w
+          \exp:w \exp_end_continue_f:w
           \@@_exp_after_array_f:w #2 \s_@@_stop
           \exp_after:wN
         }
