--- a/l3trial/l3fp-extras/l3fp-symbolic.dtx
+++ b/l3trial/l3fp-extras/l3fp-symbolic.dtx
@@ -217,12 +217,12 @@
       { , \exp:w \use_none:nn }
     \exp_after:wN \exp_end: \exp_after:wN
       {
-        \exp:w \exp_continue_f:w
+        \exp:w \exp_end_continue_f:w
         \@@_exp_after_array_f:w #3 \s_@@_stop
         \exp_after:wN
       }
     \exp_after:wN ;
-    \exp:w \exp_continue_f:w #1
+    \exp:w \exp_end_continue_f:w #1
   }
 \cs_new:Npn \@@_exp_after_symbolic_aux:w #1, #2;
   {
@@ -400,7 +400,7 @@
     \cs_new_nopar:cpn { @@_symbolic_to_#1:w }
       {
         \exp_after:wN \@@_symbolic_convert:wnnN
-        \exp:w \exp_continue_f:w
+        \exp:w \exp_end_continue_f:w
         \@@_exp_after_symbolic_f:nw { { #2 } { fp_to_#1 } #3 }
       }
   }
