--- a/l3trial/l3htoks/l3htoks.dtx
+++ b/l3trial/l3htoks/l3htoks.dtx
@@ -311,9 +311,9 @@
         \@@_ignore_spaces_auxiii:NNw
       \fi:
     \fi:
-    \exp_after:wN \@@_ignore_spaces_auxi: \exp:w \exp_continue_f:w
+    \exp_after:wN \@@_ignore_spaces_auxi: \exp:w \exp_end_continue_f:w
   }
-\cs_new_protected:Npn \@@_ignore_spaces_auxiii:NNw #1#2#3 \exp_continue_f:w
+\cs_new_protected:Npn \@@_ignore_spaces_auxiii:NNw #1#2#3 \exp_end_continue_f:w
   { #1 #2 \l_@@_peek_next_tl }
 %    \end{macrocode}
 % \end{macro}
