--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -2748,7 +2748,7 @@
       {
         \tl_if_empty:nTF {#1}
           { \prg_return_false: }
-          { \@@_if_empty_return:o { \exp:w \exp_continue_f:w #1 } }
+          { \@@_if_empty_return:o { \exp:w \exp_end_continue_f:w #1 } }
       }
   }
 %    \end{macrocode}
