--- a/l3trial/l3bigint/l3bigint.dtx
+++ b/l3trial/l3bigint/l3bigint.dtx
@@ -654,26 +654,6 @@
 %    \end{macrocode}
 % \end{macro}
 %
-% \begin{macro}[int, EXP]{\@@_exp:w, \@@_exp_stop:, \@@_exp_to_f:w, \@@_exp_to_f:n}
-%   \begin{syntax}
-%     \cs{@@_exp:w} \ldots{} \cs{@@_exp_to_f:n} \meta{tokens}
-%   \end{syntax}
-%   The \tn{romannumeral} primitive is used heavily for expansion
-%   control.  When expanded once, it expands everything it follows
-%   until encountering one of the other three functions:
-%   \cs{@@_exp_stop:} stops the expansion completely while
-%   \cs{@@_exp_to_f:w} and \cs{@@_exp_to_f:n} convert it to
-%   \texttt{f}-expansion.  The \texttt{n}-type function is used to get
-%   rid of unwanted braces in the user's big integer expression.
-%
-% Most of these are now available from pkg{l3expan}
-%    \begin{macrocode}
-%\cs_new_eq:NN \@@_exp:w \exp:w
-%\cs_new_eq:NN \@@_exp_stop: \exp_end:
-%\cs_new_eq:NN \@@_exp_to_f:w \exp_continue_f:w
-\cs_new:Npn \@@_exp_to_f:n #1 { -`0 #1 }         % not provided in l3expan
-%    \end{macrocode}
-% \end{macro}
 %
 % \begin{variable}[int]{\s_@@}
 % \begin{macro}[aux]{\@@_chk:w}
@@ -716,11 +696,11 @@
 %
 % \begin{macro}[aux, EXP]{\@@_parse_return_semicolon:w}
 %   This very odd function swaps its position with the following
-%   \cs{fi:} and removes \cs{@@_exp_to_f:n} normally responsible for
+%   \cs{fi:} and removes \cs{exp_end_continue_f:nw} normally responsible for
 %   expansion.  That turns out to be useful.
 %    \begin{macrocode}
 \cs_new:Npn \@@_parse_return_semicolon:w
-    #1 \fi: \@@_exp_to_f:n { \fi: ; #1 }
+    #1 \fi: \exp_end_continue_f:nw { \fi: ; #1 }
 %    \end{macrocode}
 % \end{macro}
 %
@@ -773,7 +753,7 @@
         \else:
           \@@_parse_return_semicolon:w #3 ##2
         \fi:
-        \@@_exp_to_f:n
+        \exp_end_continue_f:nw
       }
   }
 \@@_tmp:w {viii} \@@_parse_digits_vii:NN  { ; 8 }
@@ -857,7 +837,7 @@
     \@@_int_value:w 1
       \@@_exp_after_f_aux:NNNNNNNN #4
       {
-        \exp_after:wN ; \exp:w \exp_continue_f:w
+        \exp_after:wN ; \exp:w \exp_end_continue_f:w
         \use_none_delimit_by_q_stop:w
       }
       ???? ???? \q_stop #1
@@ -911,7 +891,7 @@
     \exp_after:wN \@@_parse_after:ww
     \exp:w
       \@@_parse_operand:Nw \c_minus_one
-      \@@_exp_to_f:n #1
+      \exp_end_continue_f:nw #1
       \s_@@_mark \@@_parse_infix_end:N
     \s_@@_stop
   }
@@ -931,10 +911,10 @@
 %    \begin{macrocode}
 \cs_new:Npn \@@_parse_operand:Nw #1
   {
-    \exp_continue_f:w
+    \exp_end_continue_f:w
     \exp_after:wN \@@_parse_continue:NwN
     \exp_after:wN #1
-    \exp:w \exp_continue_f:w
+    \exp:w \exp_end_continue_f:w
     \exp_after:wN \@@_parse_one:Nw
     \exp_after:wN #1
     \exp:w
@@ -953,8 +933,8 @@
   {
     \exp_after:wN \@@_parse_continue:NwN
     \exp_after:wN #1
-    \exp:w \exp_continue_f:w \cs:w @@_#3_o:ww \cs_end: #2 #4
-    \exp:w \exp_continue_f:w #5 #1
+    \exp:w \exp_end_continue_f:w \cs:w @@_#3_o:ww \cs_end: #2 #4
+    \exp:w \exp_end_continue_f:w #5 #1
   }
 %    \end{macrocode}
 % \end{macro}
@@ -1033,19 +1013,19 @@
     \cs:w @@_exp_after \@@_type_from_scan:N #2 _f:nw \cs_end:
       {
         \exp_after:wN \@@_parse_infix:NN
-        \exp_after:wN #1 \exp:w \@@_exp_to_f:n
+        \exp_after:wN #1 \exp:w \exp_end_continue_f:nw
       }
     #2
   }
 \cs_new:Npn \@@_exp_after_mark_f:nw #1
   {
     \msg_expandable_error:nn { bigint } { early-end }
-    \exp_after:wN \c_@@_zero_bigint \exp:w \exp_continue_f:w #1
+    \exp_after:wN \c_@@_zero_bigint \exp:w \exp_end_continue_f:w #1
   }
 \cs_new:cpn { @@_exp_after_?_f:nw } #1#2
   {
     \msg_expandable_error:nnn { bigint } { bad-var } {#2}
-    \exp_after:wN \c_@@_zero_bigint \exp:w \exp_continue_f:w #1
+    \exp_after:wN \c_@@_zero_bigint \exp:w \exp_end_continue_f:w #1
   }
 %<*package>
 \group_begin:
@@ -1054,7 +1034,7 @@
     {
       \cs_gset:cpn { @@_exp_after_?_f:nw } #1#2
         {
-          \exp_after:wN \c_@@_zero_bigint \exp:w \exp_continue_f:w #1
+          \exp_after:wN \c_@@_zero_bigint \exp:w \exp_end_continue_f:w #1
           \str_if_eq:nnTF {#2} { \protect }
             {
               \cs_if_eq:NNTF #2 \@unexpandable@protect { \use_i:nn } { \use:n }
@@ -1087,7 +1067,7 @@
     \exp_after:wN #1
     \exp_after:wN \s_@@
     \exp_after:wN \@@_chk:w
-    \exp:w \exp_continue_f:w
+    \exp:w \exp_end_continue_f:w
     \exp_after:wN \use:nn
     \exp_after:wN \@@_parse_one_register_aux:N
     \exp_after:wN { \@@_int_value:w #2 }
@@ -1142,13 +1122,13 @@
     \cs_if_exist:cTF { @@_parse_infix_ \token_to_str:N #1 :N }
       {
         \msg_expandable_error:nnn { bigint } { missing-number } {#1}
-        \exp_after:wN \c_@@_zero_bigint \exp:w \exp_continue_f:w
+        \exp_after:wN \c_@@_zero_bigint \exp:w \exp_end_continue_f:w
         \@@_parse_infix:NN #3 #1
       }
       {
         \msg_expandable_error:nnn { bigint } { unknown-symbol } {#1}
         \exp_after:wN \@@_parse_one:Nw \exp_after:wN #3
-        \exp:w \@@_exp_to_f:n
+        \exp:w \exp_end_continue_f:nw
       }
   }
 %    \end{macrocode}
@@ -1190,9 +1170,9 @@
     \else:
       \@@_parse_trim_end:w #1
     \fi:
-    \@@_exp_to_f:n
+    \exp_end_continue_f:nw
   }
-\cs_new:Npn \@@_parse_trim_end:w #1 \fi: \@@_exp_to_f:n
+\cs_new:Npn \@@_parse_trim_end:w #1 \fi: \exp_end_continue_f:nw
   {
     \fi:
     \if_int_compare:w \c_nine < 1 \token_to_str:N #1 \exp_stop_f:
@@ -1219,7 +1199,7 @@
 \cs_new_nopar:Npn \@@_parse_decimal:N
   {
     \exp_after:wN \@@_parse_decimal_count:w
-    \exp:w \exp_continue_f:w \@@_parse_decimal_aux:N
+    \exp:w \exp_end_continue_f:w \@@_parse_decimal_aux:N
   }
 \cs_new_nopar:Npn \@@_parse_decimal_aux:N
   {
@@ -1271,7 +1251,7 @@
 \cs_new:Npn \@@_parse_apply_unary:NNNwN #1#2#3#4@#5
   {
     #3 #2 #4 @
-    \exp:w \exp_continue_f:w #5 #1
+    \exp:w \exp_end_continue_f:w #5 #1
   }
 %    \end{macrocode}
 % \end{macro}
@@ -1294,7 +1274,7 @@
     \else:
       \@@_parse_operand:Nw \c_twelve
     \fi:
-    \@@_exp_to_f:n
+    \exp_end_continue_f:nw
   }
 %    \end{macrocode}
 % \end{macro}
@@ -1324,7 +1304,7 @@
       \else:
         \@@_parse_operand:Nw \c_zero
       \fi:
-      \@@_exp_to_f:n
+      \exp_end_continue_f:nw
     }
   \cs_new:Npn \@@_parse_lparen_after:NwN #1#2 @ #3
     {
@@ -1333,7 +1313,7 @@
           \@@_exp_after_array_f:w #2 \s_@@_stop
           \exp_after:wN \@@_parse_infix:NN
           \exp_after:wN #1
-          \exp:w \@@_exp_to_f:n
+          \exp:w \exp_end_continue_f:nw
         }
         {
           \msg_expandable_error:nnn { bigint } { missing } { ) }
@@ -1381,7 +1361,7 @@
       \else:
         \exp_after:wN #1
         \exp_after:wN #2
-        \exp:w \exp_after:wN \@@_exp_to_f:n
+        \exp:w \exp_after:wN \exp_end_continue_f:nw
       \fi:
     }
 \group_end:
@@ -1420,7 +1400,7 @@
         \msg_expandable_error:nnn { bigint } { extra } { ) }
         \exp_after:wN \@@_parse_infix:NN
         \exp_after:wN #1
-        \exp:w \exp_after:wN \@@_exp_to_f:n
+        \exp:w \exp_after:wN \exp_end_continue_f:nw
       \else:
         \exp_after:wN @
         \exp_after:wN \use_none:n
@@ -1464,7 +1444,7 @@
             \exp_after:wN #2
             \exp:w
             \@@_parse_operand:Nw #4
-            \exp_after:wN \@@_exp_to_f:n
+            \exp_after:wN \exp_end_continue_f:nw
           \else:
             \exp_after:wN @
             \exp_after:wN \use_none:n
@@ -1511,7 +1491,7 @@
       \exp_after:wN \@@_parse_apply_juxtapose:NwwN
       \exp:w
       \@@_parse_operand:Nw \c_ten
-      \exp_after:wN \@@_exp_to_f:n
+      \exp_after:wN \exp_end_continue_f:nw
     \else:
       \exp_after:wN @
       \exp_after:wN \use_none:n
@@ -1565,7 +1545,7 @@
 \cs_new:Npn \@@_tree_dp_aux:n #1
   {
     \exp_after:wN \@@_tree_collect:w
-    \exp:w \exp_continue_f:w
+    \exp:w \exp_end_continue_f:w
       \@@_tree_auxi:NNNNNNNN #1 { ? \@@_tree_auxi_end:w } ??????? ;
   }
 \cs_new:Npn \@@_tree_auxi:NNNNNNNN #1#2#3#4#5#6#7#8
@@ -2856,7 +2836,7 @@
 \cs_new:Npn \@@_mul:nw #1#2
   {
     \exp_after:wN \@@_mul:wnw
-    \exp:w \exp_continue_f:w \@@_mul_digit:nN {#1} #2 ; {#1}
+    \exp:w \exp_end_continue_f:w \@@_mul_digit:nN {#1} #2 ; {#1}
   }
 \cs_new:Npn \@@_mul:wnw #1 ; #2 #3
   {
@@ -2866,7 +2846,7 @@
         \exp_last_unbraced:Nf \@@_mul:wnw
           {
             \exp_after:wN \@@_add_signed:Nww \exp_after:wN +
-              \exp:w \exp_continue_f:w \@@_mul_digit:nN {#2} #3 ;
+              \exp:w \exp_end_continue_f:w \@@_mul_digit:nN {#2} #3 ;
               #1 0 ;
             ;
           }
@@ -2963,7 +2943,7 @@
       }
       {
         \int_compare:nNnF {#4} = {#5} { \exp_after:wN - }
-        \exp:w \exp_continue_f:w
+        \exp:w \exp_end_continue_f:w
         \tl_if_empty:nTF {#1} { 1 } { \@@_add_signed:Nww + 1 ; #1 ; }
       }
   }
@@ -2989,7 +2969,7 @@
         0
       }
       {
-        \exp_after:wN #5 \exp:w \exp_continue_f:w
+        \exp_after:wN #5 \exp:w \exp_end_continue_f:w
         \exp_args:Nf \@@_div:nnn { \tl_count:n {#4} } {#2} {#4}
         {#1} {#3}
       }
