--- a/l3trial/xfont/xfss.dtx
+++ b/l3trial/xfont/xfss.dtx
@@ -1,6 +1,6 @@
 % \iffalse
 %
-%% File xfss.dtx Copyright (C) 2011,2012 The LaTeX3 Project
+%% File xfss.dtx Copyright (C) 2011,2012,2015 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -415,12 +415,14 @@
 % \subsubsection{Function variants}
 %
 %    \begin{macrocode}
+\cs_generate_variant:Nn \file_input:n { x }
 \cs_generate_variant:Nn \prop_gput:Nnn {Nx, Nxx, cx,cxx}
 \cs_generate_variant:Nn \prop_if_in:NnTF {Nx}
 \cs_generate_variant:Nn \prop_gpop:NnNTF {Nx}
 \cs_generate_variant:Nn \prop_gpop:NnNF {cx}
 \cs_generate_variant:Nn \prop_gpop:NnN {cx}
 \cs_generate_variant:Nn \prop_get:NnNT {cx}
+\cs_generate_variant:Nn \str_fold_case:n { V }
 %    \end{macrocode}
 %
 % \subsubsection{General}
@@ -1246,11 +1248,9 @@
           { \l_xfss_encoding_tl + \l_xfss_family_tl}
         \tl_new:c { \l_xfss_encoding_tl + \l_xfss_family_tl}
         \xfss_switch_catcodes:
-        \use:x
-          {
-            \tex_lowercase:D
-              { \file_input:n { \l_xfss_encoding_tl \l_xfss_family_tl .fd } }
-          }
+        \tl_set:Nx \l_xfss_tmpa_tl {  \l_xfss_encoding_tl \l_xfss_family_tl .fd }
+        \file_input:x
+          { \str_fold_case:V \l_xfss_tmpa_tl }
       }
   }
 %    \end{macrocode}
@@ -2303,7 +2303,7 @@
       { \DeclareTextCompositeCommand #1 {#2} {#3} }
     \group_begin:
       \tex_lccode:D \c_zero #4
-      \tex_lowercase:D  {
+      \tl_to_lowercase:n  {
     \group_end:
     \l_xfss_tmpa_tl ^^@ }
   }
