--- a/l3trial/l3kernel-extras/l3kernel-extras.dtx
+++ b/l3trial/l3kernel-extras/l3kernel-extras.dtx
@@ -1,6 +1,6 @@
 % \iffalse
 %
-%% File l3kernel-extras.dtx (C) Copyright 2012 The LaTeX3 Project
+%% File l3kernel-extras.dtx (C) Copyright 2012,2015 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -1026,8 +1026,8 @@
     \group_begin:
       \cs_set_eq:NN \ \c_space_tl
       \cs_set:Npn \\ { \exp_not:n { \\ > ~ } }
-      \tl_to_lowercase:n { \tl_set:Nn \l__char_lowercase_tl {#1} }
-      \tl_to_uppercase:n { \tl_set:Nn \l__char_uppercase_tl {#1} }
+      \tex_lowercase:D { \tl_set:Nn \l__char_lowercase_tl {#1} }
+      \tex_uppercase:D { \tl_set:Nn \l__char_uppercase_tl {#1} }
       \tl_set:Nx \l__char_internal_tl
         {
           \\ category \
