Update \char_set_active_eq:NN/Remove \char_set_active:Npn
As discussed on the team list, the updated approach here does not
itself make the char active. It also means that all active chars
must have some equivalent funtion (macro) defintion.

To do yet is 'char generation' (cf. \Ucharcat).

--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -1034,52 +1034,16 @@
 %
 % \section{Additions to \pkg{l3tokens}}
 %
-% \begin{function}{\char_set_active:Npn,  \char_set_active:Npx}
-%   \begin{syntax}
-%      \cs{char_set_active:Npn} \meta{char} \meta{parameters} \Arg{code}
-%   \end{syntax}
-%   Makes \meta{char} an active character to expand to \meta{code} as
-%   replacement text.
-%   Within the \meta{code}, the \meta{parameters} (|#1|, |#2|,
-%   \emph{etc.}) will be replaced by those absorbed. The \meta{char} is
-%   made active within the current \TeX{} group level, and the definition
-%   is also local.
-% \end{function}
-%
-% \begin{function}{\char_gset_active:Npn, \char_gset_active:Npx}
-%   \begin{syntax}
-%      \cs{char_gset_active:Npn} \meta{char} \meta{parameters} \Arg{code}
-%   \end{syntax}
-%   Makes \meta{char} an active character to expand to \meta{code} as
-%   replacement text.
-%   Within the \meta{code}, the \meta{parameters} (|#1|, |#2|,
-%   \emph{etc.}) will be replaced by those absorbed. The \meta{char} is
-%   made active within the current \TeX{} group level, but the definition
-%   is global. This function is therefore suited to cases where an active
-%   character definition should be applied only in some context (where the
-%   \meta{char} is again made active).
-% \end{function}
-%
-% \begin{function}{\char_set_active_eq:NN}
+% \begin{function}[updated = 2015-09-01]
+%   {\char_set_active_eq:NN, \char_gset_active_eq:NN}
 %   \begin{syntax}
 %      \cs{char_set_active_eq:NN} \meta{char} \meta{function}
 %   \end{syntax}
-%   Makes \meta{char} an active character equivalent in meaning to the
-%   \meta{function} (which may itself be an active character). The \meta{char}
-%   is made active within the current \TeX{} group level, and the definition
-%   is also local.
-% \end{function}
-%
-% \begin{function}{\char_gset_active_eq:NN}
-%   \begin{syntax}
-%      \cs{char_gset_active_eq:NN} \meta{char} \meta{function}
-%   \end{syntax}
-%   Makes \meta{char} an active character equivalent in meaning to the
-%   \meta{function} (which may itself be an active character). The \meta{char}
-%   is made active within the current \TeX{} group level, but the definition
-%   is global. This function is therefore suited to cases where an active
-%   character definition should be applied only in some context (where the
-%   \meta{char} is again made active).
+%   Sets the behaviour of the \meta{char} in situations where it is an
+%   active char (category code $13$) to be equivalent to that of the 
+%   \meta{function}. The category code of the \meta{char} is
+%   \emph{unchanged} by this process. The \meta{function} may itself
+%   be an active character.
 % \end{function}
 %
 % \begin{function}[TF, updated = 2012-12-20]{\peek_N_type:}
@@ -4335,32 +4299,26 @@
 %<@@=char>
 %    \end{macrocode}
 %
-% \begin{macro}{\char_set_active:Npn, \char_set_active:Npx}
-% \begin{macro}{\char_gset_active:Npn, \char_gset_active:Npx}
 % \begin{macro}{\char_set_active_eq:NN, \char_gset_active_eq:NN}
+%   Two simple functions with very similar definitions, so set up using
+%   an auxiliary.
 %    \begin{macrocode}
 \group_begin:
   \char_set_catcode_active:N \^^@
-  \cs_set:Npn \char_tmp:NN #1#2
+  \cs_set_protected:Npn \char_tmp:NN #1#2
     {
-      \cs_new:Npn #1 ##1
+      \cs_new_protected:Npn #1 ##1
         {
-          \char_set_catcode_active:n { `##1 }
           \group_begin:
-          \char_set_lccode:nn { `\^^@ } { `##1 }
-          \tl_to_lowercase:n { \group_end: #2 ^^@ }
+            \char_set_catcode_active:n { `##1 }
+            \char_set_lccode:nn { `\^^@ } { `##1 }
+          \tex_lowercase:D { \group_end: #2 ^^@ }
         }
     }
-  \char_tmp:NN \char_set_active:Npn    \cs_set:Npn
-  \char_tmp:NN \char_set_active:Npx    \cs_set:Npx
-  \char_tmp:NN \char_gset_active:Npn   \cs_gset:Npn
-  \char_tmp:NN \char_gset_active:Npx   \cs_gset:Npx
   \char_tmp:NN \char_set_active_eq:NN  \cs_set_eq:NN
   \char_tmp:NN \char_gset_active_eq:NN \cs_gset_eq:NN
 \group_end:
 %    \end{macrocode}
-% \end{macro}
-% \end{macro}
 % \end{macro}
 %
 %    \begin{macrocode}
