One sequence => comma list change

--- a/l3kernel/l3clist.dtx
+++ b/l3kernel/l3clist.dtx
@@ -601,7 +601,7 @@
 %
 % \begin{function}[TF, added = 2012-05-14]{\clist_pop:NN, \clist_pop:cN}
 %   \begin{syntax}
-%     \cs{clist_pop:NNTF} \meta{sequence} \meta{token list variable} \Arg{true code} \Arg{false code}
+%     \cs{clist_pop:NNTF} \meta{comma list} \meta{token list variable} \Arg{true code} \Arg{false code}
 %   \end{syntax}
 %   If the \meta{comma list} is empty, leaves the \meta{false code} in the
 %   input stream.  The value of the \meta{token list variable} is
