Various \meta <=> \Arg corrections

--- a/l3kernel/l3tl.dtx
+++ b/l3kernel/l3tl.dtx
@@ -453,8 +453,8 @@
 % \begin{function}[added = 2012-05-24, updated = 2012-06-05, EXP,pTF]
 %   {\tl_if_empty:n, \tl_if_empty:V, \tl_if_empty:o}
 %   \begin{syntax}
-%     \cs{tl_if_empty_p:n} \Arg{token list}
-%     \cs{tl_if_empty:nTF} \Arg{token list} \Arg{true code} \Arg{false code}
+%     \cs{tl_if_empty_p:n} \meta{token list}
+%     \cs{tl_if_empty:nTF} \meta{token list} \Arg{true code} \Arg{false code}
 %   \end{syntax}
 %   Tests if the \meta{token list} is entirely empty
 %   (\emph{i.e.}~contains no tokens at all).
@@ -463,8 +463,8 @@
 % \begin{function}[EXP,pTF]
 %   {\tl_if_eq:NN, \tl_if_eq:Nc, \tl_if_eq:cN, \tl_if_eq:cc}
 %   \begin{syntax}
-%     \cs{tl_if_eq_p:NN} \Arg{tl~var_1} \Arg{tl~var_2}
-%     \cs{tl_if_eq:NNTF} \Arg{tl~var_1} \Arg{tl~var_2} \Arg{true code} \Arg{false code}
+%     \cs{tl_if_eq_p:NN} \meta{tl~var_1} \meta{tl~var_2}
+%     \cs{tl_if_eq:NNTF} \meta{tl~var_1} \meta{tl~var_2} \Arg{true code} \Arg{false code}
 %   \end{syntax}
 %   Compares the content of two \meta{token list variables} and
 %   is logically \texttt{true} if the two contain the same list of
@@ -480,7 +480,7 @@
 %
 % \begin{function}[TF]{\tl_if_eq:nn}
 %   \begin{syntax}
-%     \cs{tl_if_eq:nnTF} \meta{token list_1} \Arg{token list_2} \Arg{true code} \Arg{false code}
+%     \cs{tl_if_eq:nnTF} \Arg{token list_1} \Arg{token list_2} \Arg{true code} \Arg{false code}
 %   \end{syntax}
 %   Tests if \meta{token list_1} and \meta{token list_2} contain the
 %   same list of tokens, both in respect of character codes and category
