--- a/l3kernel/l3doc.dtx
+++ b/l3kernel/l3doc.dtx
@@ -1670,21 +1670,23 @@ Do not distribute a modified version of this file.
 %   Allow |<...>| to be used as markup for |\meta{...}|.  Clear various
 %   variables.
 %    \begin{macrocode}
-\cs_new_protected:Npn \@@_function_init:
-  {
-    \coffin_clear:N \l_@@_descr_coffin
-    \box_gclear:N \g_@@_syntax_box
-    \coffin_clear:N \l_@@_syntax_coffin
-    \coffin_clear:N \l_@@_names_coffin
-    \bool_set_false:N \l_@@_macro_TF_bool
-    \bool_set_false:N \l_@@_macro_pTF_bool
-    \bool_set_false:N \l_@@_macro_EXP_bool
-    \bool_set_false:N \l_@@_macro_rEXP_bool
-    \bool_set_false:N \l_@@_no_label_bool
-    \cs_set_protected:Npn \@@_active_meta:w ##1 > { \meta {##1} }
-    \char_set_active_eq:NN < \@@_active_meta:w
-    \char_set_catcode_active:N \<
+\group_begin:
+  \char_set_catcode_active:N \<
+  \cs_new_protected:Npn \@@_function_init:
+    {
+      \coffin_clear:N \l_@@_descr_coffin
+      \box_gclear:N \g_@@_syntax_box
+      \coffin_clear:N \l_@@_syntax_coffin
+      \coffin_clear:N \l_@@_names_coffin
+      \bool_set_false:N \l_@@_macro_TF_bool
+      \bool_set_false:N \l_@@_macro_pTF_bool
+      \bool_set_false:N \l_@@_macro_EXP_bool
+      \bool_set_false:N \l_@@_macro_rEXP_bool
+      \bool_set_false:N \l_@@_no_label_bool
+      \char_set_catcode_active:N \<
+      \cs_set_protected_nopar:Npn < ##1 > { \meta {##1} }
   }
+\group_end:
 %    \end{macrocode}
 % \end{macro}
 %
