changed _to_hexadecimal:n to _Hex:n changed _to_binary:n  to _bin:n changed _to_octal:n to _oct:n
that should be transparent, but for some reason I get a diff in m3tl-analysis which to me looks rather weird ... anybody any idea?

--- a/l3trial/xfont/l3font.dtx
+++ b/l3trial/xfont/l3font.dtx
@@ -1,6 +1,6 @@
 % \iffalse
 %
-%% File: l3font.dtx Copyright (C) 2011,2012 LaTeX3 project
+%% File: l3font.dtx Copyright (C) 2011,2012,2015 LaTeX3 project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -523,7 +523,7 @@
       {
         \tex_mathaccent:D "
           \math_class_to_int:N #2
-          \int_to_hexadecimal:n { (#3) * \c_math_max_glyph_int + #4 }
+          \int_to_Hex:n { (#3) * \c_math_max_glyph_int + #4 }
         \scan_stop:
       }
   }
@@ -542,7 +542,7 @@
     \tex_global:D
     \tex_mathchardef:D #1 "
       \math_class_to_int:N #2
-      \int_to_hexadecimal:n { (#3) * \c_math_max_glyph_int + #4 }
+      \int_to_Hex:n { (#3) * \c_math_max_glyph_int + #4 }
     \scan_stop:
   }
 %    \end{macrocode}
@@ -555,7 +555,7 @@
     \tex_global:D
     \tex_mathcode:D `#1 = "
       \math_class_to_int:N #2
-      \int_to_hexadecimal:n { (#3) * \c_math_max_glyph_int + #4 }
+      \int_to_Hex:n { (#3) * \c_math_max_glyph_int + #4 }
     \scan_stop:
   }
 %    \end{macrocode}
@@ -574,7 +574,7 @@
       {
         \tex_delimiter:D "
           \math_class_to_int:N #2
-          \int_to_hexadecimal:n
+          \int_to_Hex:n
             {
               ( (#3) * \c_math_max_glyph_int + #4 ) * \c_math_delcode_step_int
               + (#5) * \c_math_max_glyph_int + #6
@@ -591,7 +591,7 @@
   {
     \tex_global:D
       \tex_delcode:D `#1 = "
-        \int_to_hexadecimal:n
+        \int_to_Hex:n
           {
             ( (#2) * \c_math_max_glyph_int + #3 ) * \c_math_delcode_step_int
             + (#4) * \c_math_max_glyph_int + #5
@@ -613,7 +613,7 @@
     \cs_gset_protected_nopar:Npx #1
       {
         \tex_radical:D "
-          \int_to_hexadecimal:n
+          \int_to_Hex:n
             {
               ( (#2) * \c_math_max_glyph_int + #3 ) * \c_math_delcode_step_int
               + (#4) * \c_math_max_glyph_int + #5
