--- a/l3experimental/l3str/l3str-format.dtx
+++ b/l3experimental/l3str/l3str-format.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3str-format.dtx Copyright (C) 2012-2013 The LaTeX3 Project
+%% File: l3str-format.dtx Copyright (C) 2012-2013,2015 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -665,9 +665,9 @@
       {
         { ? } { \@@_int:NwnnNNn \use:n }
         { d } { \@@_int:NwnnNNn \use:n }
-        { b } { \@@_int:NwnnNNn \int_to_binary:n }
-        { o } { \@@_int:NwnnNNn \int_to_octal:n }
-        { X } { \@@_int:NwnnNNn \int_to_hexadecimal:n }
+        { b } { \@@_int:NwnnNNn \int_to_bin:n }
+        { o } { \@@_int:NwnnNNn \int_to_oct:n }
+        { X } { \@@_int:NwnnNNn \int_to_Hex:n }
       }
       {
         \__msg_kernel_expandable_error:nnnn
