--- a/l3kernel/l3candidates.dtx
+++ b/l3kernel/l3candidates.dtx
@@ -1049,7 +1049,7 @@
 % \begin{function}[added = 2015-09-02]
 %   {\char_set_active_eq:nN, \char_gset_active_eq:nN}
 %   \begin{syntax}
-%      \cs{char_set_active_eq:nN} \Arg{integer expression \meta{function}
+%      \cs{char_set_active_eq:nN} \Arg{integer expression} \meta{function}
 %   \end{syntax}
 %   Sets the behaviour of the \meta{char} which has character
 %   code as given by the \meta{integer expression} in situations
