--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -250,8 +250,8 @@
 %   \end{texnote}
 % \end{function}
 %
-% \begin{function}[rEXP, added = 2014-06-19, updated = 2015-03-01]
-%   {\str_fold_case:n}
+% \begin{function}[rEXP, added = 2014-06-19, updated = 2015-09-04]
+%   {\str_fold_case:n, \str_fold_case:V}
 %   \begin{syntax}
 %     \cs{str_fold_case:n} \Arg{tokens}
 %   \end{syntax}
@@ -554,7 +554,7 @@
 %
 % \begin{macro}[EXP]
 %   {
-%     \str_fold_case:n,
+%     \str_fold_case:n, \str_fold_case:V,
 %     \str_lower_case:n, \str_lower_case:f,
 %     \str_upper_case:n, \str_upper_case:f
 %   }
@@ -574,6 +574,7 @@
 \cs_new:Npn \str_fold_case:n #1 { \__str_change_case:nn {#1} { fold } }
 \cs_new:Npn \str_lower_case:n #1 { \__str_change_case:nn {#1} { lower } }
 \cs_new:Npn \str_upper_case:n #1 { \__str_change_case:nn {#1} { upper } }
+\cs_generate_variant:Nn \str_fold_case:n  { n }
 \cs_generate_variant:Nn \str_lower_case:n { f }
 \cs_generate_variant:Nn \str_upper_case:n { f }
 \cs_new:Npn \__str_change_case:nn #1
