--- a/l3kernel/l3str.dtx
+++ b/l3kernel/l3str.dtx
@@ -1,4 +1,4 @@
-% \iffalse meta-comment
+	% \iffalse meta-comment
 %
 %% File: l3str.dtx Copyright (C) 2014-2015 The LaTeX3 Project
 %%
@@ -574,7 +574,7 @@
 \cs_new:Npn \str_fold_case:n #1 { \__str_change_case:nn {#1} { fold } }
 \cs_new:Npn \str_lower_case:n #1 { \__str_change_case:nn {#1} { lower } }
 \cs_new:Npn \str_upper_case:n #1 { \__str_change_case:nn {#1} { upper } }
-\cs_generate_variant:Nn \str_fold_case:n  { n }
+\cs_generate_variant:Nn \str_fold_case:n  { V }
 \cs_generate_variant:Nn \str_lower_case:n { f }
 \cs_generate_variant:Nn \str_upper_case:n { f }
 \cs_new:Npn \__str_change_case:nn #1
