One \tl_expandable_lowercase:n removed

--- a/l3trial/xfont/xfss.dtx
+++ b/l3trial/xfont/xfss.dtx
@@ -842,7 +842,7 @@
   \clist_map_inline:nn {#1}
   {
     \tl_set:Nn \l_xfss_default_encoding_tl {##1}
-    \tl_set:Nx \l_fss_tmp_tl { \tl_expandable_lowercase:n {##1} enc.def }
+    \tl_set:Nx \l_fss_tmp_tl { \str_fold_case:n {##1} enc.def }
     \file_if_exist:nTF { \l_fss_tmp_tl }
       { \exp_args:Nx \file_input:n  { \l_fss_tmp_tl } }
       { \msg_error:nnx {xfss} {encoding-file-missing} {\l_fss_tmp_tl} }
