Use low-level engine tests for bootstrapping
The higher-level interfaces will move to a new sys module but
to avoid that having to be loaded very early a few adjustments
are made here.

--- a/l3kernel/l3int.dtx
+++ b/l3kernel/l3int.dtx
@@ -1190,7 +1190,7 @@
       }
   }
 \cs_generate_variant:Nn \int_const:Nn { c }
-\pdftex_if_engine:TF
+\cs_if_exist:NTF \pdftex_pdftexversion:D
   {
     \cs_new_eq:NN \@@_constdef:Nw \tex_mathchardef:D
     \tex_mathchardef:D \c__max_constdef_int 32 767 ~
