--- a/l3kernel/l3alloc.dtx
+++ b/l3kernel/l3alloc.dtx
@@ -1,6 +1,6 @@
 % \iffalse meta-comment
 %
-%% File: l3alloc.dtx Copyright (C) 1990-2012,2014 The LaTeX3 Project
+%% File: l3alloc.dtx Copyright (C) 1990-2012,2014,2015 The LaTeX3 Project
 %%
 %% It may be distributed and/or modified under the conditions of the
 %% LaTeX Project Public License (LPPL), either version 1.3c of this
@@ -184,9 +184,10 @@
 %   need to have their allocators set up \enquote{early}. It therefore
 %   makes sense to collect most of them together here.
 %    \begin{macrocode}
-\luatex_if_engine:TF
+\cs_if_exist:NTF \luatex_luatexversion:D
   { \@@_new:nnnN { box } \c_zero \c_max_register_int \tex_chardef:D }
   { \@@_new:nnnN { box } \c_zero \c_max_register_int \tex_mathchardef:D }
+\fi:
 \@@_new:nnnN { dim }     \c_zero \c_max_register_int \tex_dimendef:D
 \@@_new:nnnN { int }    { 11 }   \c_max_register_int \tex_countdef:D
 \@@_new:nnnN { muskip } \c_zero  \c_max_register_int \tex_muskipdef:D
