--- a/l3kernel/expl3.dtx
+++ b/l3kernel/expl3.dtx
@@ -1323,7 +1323,7 @@
       {
         \tl_set:Nx \l__expl_driver_tl
           {
-            \xetex_if_engine:TF
+            \sys_if_engine_xetex:TF
               { xdvipdfmx }
               {
                 \__expl_if_pdf:TF
@@ -1335,7 +1335,7 @@
     driver / dvipdfmx .code:n =
       {
         \tl_set:Nn \l__expl_driver_tl { dvipdfmx }
-        \xetex_if_engine:TF
+        \sys_if_engine_xetex:TF
           {
             \__msg_kernel_error:nnnn { expl } { wrong-driver }
               { dvipdfmx } { xdvipdfmx }
@@ -1353,7 +1353,7 @@
     driver / dvips .code:n =
       {
         \tl_set:Nn \l__expl_driver_tl { dvips }
-        \xetex_if_engine:TF
+        \sys_if_engine_xetex:TF
           {
             \__msg_kernel_error:nnnn { expl } { wrong-driver }
               { dvips } { xdvipdfmx }
@@ -1373,7 +1373,7 @@
     driver / pdfmode .code:n =
       {
         \tl_set:Nn \l__expl_driver_tl { pdfmode }
-        \xetex_if_engine:TF
+        \sys_if_engine_xetex:TF
           {
             \__msg_kernel_error:nnnn { expl } { wrong-driver }
               { pdfmode } { xdvipdfmx }
@@ -1391,7 +1391,7 @@
     driver / xdvipdfmx .code:n =
       {
         \tl_set:Nn \l__expl_driver_tl { xdvipdfmx }
-        \xetex_if_engine:F
+        \sys_if_engine_xetex:F
           {
             \__expl_if_pdf:TF
               {
@@ -1735,7 +1735,7 @@
   }
 \tex_input:D
   l3
-  \xetex_if_engine:TF
+  \sys_if_engine_xetex:TF
     { xdvipdfmx }
     {
       \bool_if:nTF
