--- a/l3trial/l3benchmark/l3benchmark.dtx
+++ b/l3trial/l3benchmark/l3benchmark.dtx
@@ -140,7 +140,7 @@
 % Load Heiko's \pkg{pdftexcmds} to get \tn{pdf@elapsedtime} and
 % \tn{pdf@resettimer}.
 %    \begin{macrocode}
-\luatex_if_engine:T { \RequirePackage{pdftexcmds} \scan_stop: }
+\sys_if_engine_luatex:T { \RequirePackage{pdftexcmds} \scan_stop: }
 %    \end{macrocode}
 %
 % \begin{variable}{\l_benchmark_time_fail_bool}
@@ -151,7 +151,7 @@
 %   read.
 %    \begin{macrocode}
 \bool_new:N \l_benchmark_time_fail_bool
-\xetex_if_engine:T
+\sys_if_engine_xetex:T
   {
     \cs_if_exist:NTF \shellescape
       {
@@ -211,9 +211,9 @@
 %   \LuaTeX{}, rescale the value of \tn{pdfelapsedtime} or
 %   \tn{pdf@elapsedtime}.
 %    \begin{macrocode}
-\xetex_if_engine:F
+\sys_if_engine_xetex:F
   {
-    \pdftex_if_engine:TF
+    \sys_if_engine_pdftex:TF
       {
         \cs_new_protected:Npn \clock_get:N #1
           { \tl_set:Nx #1 { \fp_to_decimal:n { \pdfelapsedtime / 65536 } } }
@@ -233,9 +233,9 @@
 %   We postpone the definition for \XeTeX{}.  For \pdfTeX{} and
 %   \LuaTeX{}, call \tn{pdfresettimer} or \tn{pdf@resettimer}.
 %    \begin{macrocode}
-\xetex_if_engine:F
+\sys_if_engine_xetex:F
   {
-    \pdftex_if_engine:TF
+    \sys_if_engine_pdftex:TF
       { \cs_new_protected_nopar:Npn \clock_zero: { \pdfresettimer } }
       { \cs_new_protected_nopar:Npn \clock_zero: { \pdf@resettimer } }
   }
@@ -247,7 +247,7 @@
 % \begin{variable}{\c_@@_lua_file_tl, \c_@@_time_file_tl}
 %   File names.
 %    \begin{macrocode}
-\xetex_if_engine:T
+\sys_if_engine_xetex:T
   {
     \tl_const:Nx \c_@@_lua_file_tl { \c_job_name_tl . lua }
     \tl_const:Nx \c_@@_time_file_tl { \c_job_name_tl . timestamp }
@@ -258,7 +258,7 @@
 % \begin{variable}{\l_@@_iow}
 %   Write the \Lua{} file.
 %    \begin{macrocode}
-\xetex_if_engine:T
+\sys_if_engine_xetex:T
   {
     \iow_new:N \l_@@_iow
     \iow_open:Nn \l_@@_iow { \c_@@_lua_file_tl }
@@ -285,7 +285,7 @@
 %   \cs{l_@@_tl}.  Then assign it globally to the floating point
 %   |#1|.
 %    \begin{macrocode}
-\xetex_if_engine:T
+\sys_if_engine_xetex:T
   {
     \ior_new:N \l_@@_ior
     \tl_new:N \l_@@_tl
@@ -309,7 +309,7 @@
 %   Resetting the timer amounts to changing the \enquote{base time},
 %   used as an offset when reporting the time in \cs{_@@_get:N}.
 %    \begin{macrocode}
-\xetex_if_engine:T
+\sys_if_engine_xetex:T
   {
     \fp_new:N \g_@@_base_fp
     \cs_new_protected_nopar:Npn \clock_zero:
@@ -324,7 +324,7 @@
 %   Get the current clock time, then compute the difference with the
 %   base time.
 %    \begin{macrocode}
-\xetex_if_engine:T
+\sys_if_engine_xetex:T
   {
     \fp_new:N \g_@@_fp
     \cs_new_protected:Npn \clock_get:N #1
