--- a/l3trial/l3kernel-extras/l3kernel-extras.dtx
+++ b/l3trial/l3kernel-extras/l3kernel-extras.dtx
@@ -741,7 +741,7 @@
 % \cs{iow_newline:} within the argument of \cs{luatex_luaescapestring:D}
 % if wanted.
 %    \begin{macrocode}
-\luatex_if_engine:T
+\sys_if_engine_luatex:T
   {
     \cs_gset:Npn \__msg_expandable_warning:n #1
       {
@@ -763,7 +763,7 @@
 % could even include an error text (|tex.error| can take a second
 % argument, which is a table of strings, for the help text).
 %    \begin{macrocode}
-\luatex_if_engine:T
+\sys_if_engine_luatex:T
   {
     \cs_gset:Npx \__msg_expandable_error:n #1
       {
