--- a/l3kernel/l3doc.dtx
+++ b/l3kernel/l3doc.dtx
@@ -1256,7 +1256,7 @@ Do not distribute a modified version of this file.
 %    \end{macrocode}
 %
 % \begin{macro}{\eTeX, \IniTeX, \Lua, \LuaTeX, \pdfTeX, \XeTeX, 
-%   pTeX, upTeX, epTeX, eupTeX}
+%   \pTeX, \upTeX, \epTeX, \eupTeX}
 %   Some commands for logos.
 %    \begin{macrocode}
 \providecommand*\eTeX{\hologo{eTeX}}
