--- a/l3kernel/l3sys.dtx
+++ b/l3kernel/l3sys.dtx
@@ -172,16 +172,16 @@
     \sys_if_engine_xetex_p:
   }
   {
-    \cs_gset_eq:NN \pdftex_if_engine:T  \use_none:n
-    \cs_gset_eq:NN \pdftex_if_engine:F  \use:n
-    \cs_gset_eq:NN \pdftex_if_engine:TF \use_ii:nn
-    \cs_gset_eq:NN \pdftex_if_engine_p: \c_false_bool
+    \cs_new_eq:NN \pdftex_if_engine:T  \use_none:n
+    \cs_new_eq:NN \pdftex_if_engine:F  \use:n
+    \cs_new_eq:NN \pdftex_if_engine:TF \use_ii:nn
+    \cs_new_eq:NN \pdftex_if_engine_p: \c_false_bool
   }
   {
     \cs_gset_eq:NN \pdftex_if_engine:T  \use:n
-    \cs_gset_eq:NN \pdftex_if_engine:F  \use_none:n
-    \cs_gset_eq:NN \pdftex_if_engine:TF \use_i:nn
-    \cs_gset_eq:NN \pdftex_if_engine_p: \c_true_bool
+    \cs_new_eq:NN \pdftex_if_engine:F  \use_none:n
+    \cs_new_eq:NN \pdftex_if_engine:TF \use_i:nn
+    \cs_new_eq:NN \pdftex_if_engine_p: \c_true_bool
   }
 %    \end{macrocode}
 %
