Minor tweak for format mode/LuaTeX
By the time the job starts, the Lua module will have been read
so the correct name can get used.

--- a/l3kernel/l3bootstrap.dtx
+++ b/l3kernel/l3bootstrap.dtx
@@ -387,7 +387,7 @@
         \global\everyjob\expandafter
           {%
             \the\expandafter\everyjob
-            \expandafter\luatex_directlua:D\expandafter{\tempa}%
+            \expandafter\lua_now_x:n\expandafter{\tempa}%
           }
       \fi
     \fi
