--- a/l3kernel/l3sys.dtx
+++ b/l3kernel/l3sys.dtx
@@ -178,7 +178,7 @@
     \cs_new_eq:NN \pdftex_if_engine_p: \c_false_bool
   }
   {
-    \cs_gset_eq:NN \pdftex_if_engine:T  \use:n
+    \cs_new_eq:NN \pdftex_if_engine:T  \use:n
     \cs_new_eq:NN \pdftex_if_engine:F  \use_none:n
     \cs_new_eq:NN \pdftex_if_engine:TF \use_i:nn
     \cs_new_eq:NN \pdftex_if_engine_p: \c_true_bool
